<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.vandre.KeepCalmAndKaraokeVoto.atividades.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_musicas"
        android:orderInCategory="101"
        android:title="@string/action_musicas"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_ultimoresultado"
        android:orderInCategory="102"
        android:title="@string/action_ultimoresultado"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sobre"
        android:orderInCategory="103"
        android:title="@string/action_sobre"
        app:showAsAction="never" />
</menu>
