<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/actLogin"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:id="@+id/imgCoroa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/crown_grande" />

    <RelativeLayout
        android:id="@+id/rlKeepCalmAndKaraoke"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgCoroa"
        android:layout_marginTop="-10dp">

        <TextView
            android:id="@+id/tvKeep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="KEEP"
            android:textColor="@color/colorTextoCinza"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tvCalm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvKeep"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-12dp"
            android:text="CALM"
            android:textColor="@color/colorTextoCinza"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tvAnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvCalm"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="-12dp"
            android:layout_marginTop="-12dp"
            android:text="and"
            android:textColor="@color/colorTextoCinza"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvKaroke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAnd"
            android:layout_centerHorizontal="true"
            android:text="KARAOKÊ"
            android:textColor="@color/colorTextoCinza"
            android:textSize="22sp" />
    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilUsuario"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlKeepCalmAndKaraoke"
        android:layout_marginTop="30dp"
        android:theme="@style/TextLabelLogin">

        <AutoCompleteTextView
            android:id="@+id/edtUsuario"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/usuario"
            android:imeOptions="actionDone"
            android:inputType="textAutoComplete"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorTextoCinza"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        style="@style/BotaoFundoClaro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilUsuario"
        android:layout_centerHorizontal="true"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/tvDesenvolvidoPor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/desenvolvidopor"
        android:textColor="@color/colorTextoCinza"
        android:textSize="12sp" />
</RelativeLayout>